--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-draggable": "^2.2.2",
+    "react-resizable": "^1.4.2",
     "snapsvg": "https://github.com/Nikku/Snap.svg/archive/v0.3.0-browserify.tar.gz"
   },
   "scripts": {
